--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🔐 Netrinix Cyber Lab</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         :root {
             --hacker-green: #00ff41;
@@ -93,10 +94,7 @@
     </style>
 </head>
 <body>
-  <!-- Matrix Rain Background -->
-    <canvas id="matrix"></canvas>
-
-    <!-- Beta Version Alert (Will show on page load) -->
+ <!-- Beta Version Alert (Will show on page load) -->
     <div id="betaAlert" class="alert-modal">
         <div class="alert-content">
             <h3>⚠️ DEVELOPMENT NOTICE</h3>
