--- a/index.html
+++ b/index.html
@@ -90,6 +90,58 @@
 
         <!-- More vulnerabilities added below -->
     </div>
+     <script>
+        // Matrix Rain Animation
+        const canvas = document.getElementById('matrix');
+        const ctx = canvas.getContext('2d');
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+        const drops = Array(Math.floor(canvas.width / 20)).fill(1);
+        function drawMatrix() {
+            ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = "#0F0";
+            drops.forEach((y, i) => {
+                const text = chars[Math.floor(Math.random() * chars.length)];
+                ctx.fillText(text, i * 20, y * 20);
+                if (y * 20 > canvas.height || Math.random() > 0.975) drops[i] = 0;
+                drops[i]++;
+            });
+        }
+        setInterval(drawMatrix, 50);
+
+        // Vulnerability 1: SQL Injection
+        function searchUsers() {
+            const input = document.getElementById('searchInput').value;
+            const results = document.getElementById('searchResults');
+            if (input.includes("' OR '1'='1")) {
+                results.innerHTML = "<p>💉 SQL Injection Successful!<br>Users: admin, user1, user2</p>";
+            } else {
+                results.innerHTML = "<p>No users found.</p>";
+            }
+        }
+
+        // Vulnerability 2: XSS
+        function postComment() {
+            const comment = document.getElementById('commentInput').value;
+            const commentList = document.getElementById('commentList');
+            commentList.innerHTML += `<div>${comment}</div>`;
+        }
+
+        // Vulnerability 3: Admin Panel (CSRF)
+        function openAdminPanel() {
+            document.getElementById('adminPanel').style.display = 'block';
+        }
+        function closeAdminPanel() {
+            document.getElementById('adminPanel').style.display = 'none';
+        }
+        function changePassword() {
+            const newPass = document.getElementById('newPassword').value;
+            alert(`Password changed to: ${newPass} (CSRF Successful!)`);
+            closeAdminPanel();
+        }
+    </script>
 
     <script src="script.js"></script>
 </body>
